# note

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  backup-20250709.txt
.cargo/: config.toml
.github/workflows/: build.yml
src/: cli.rs  main.rs  manager.rs  note.rs  parser.rs
